fix(modal): avoid container to be cropped
drop the usage of vh units and use % instead in order to have a better crossbrowser support and
specially avoid cases on iOS Safari devices where the modal gets cropped.

re #186

--- a/assets/stylesheets/_components--modal.scss
+++ b/assets/stylesheets/_components--modal.scss
@@ -4,6 +4,13 @@
   }
 }
 
+// Use percentages instead vh units to limit modal height and avoid iOS issues
+.modal-inner-container,
+.fixed-modal .modal-inner-container {
+  max-height: 90%;
+  margin-bottom: 0;
+}
+
 // Avoid double scroll on all browsers but Safari iOS <= 12
 body.modal-open {
   height: 100%;
